--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^5.0.45",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
-    "vuetify": "^2.2.11",
+    "vuetify": "^2.2.21",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
